--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,6 @@
 .page-title {
-  font-size: 3em;
-  text-align: center;
-  padding: 0.3em;
+  width: 10em;
+  margin: 0 auto;
+  margin-top: -2em;
+  padding: 0;
 }
